syntax = "proto3";

package Xenolib.Algorithms.Xenophyte.Centralized.Networking.Pool;

service Pool {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc GetBlockHeader (BlockHeaderRequest) returns (BlockHeaderResponse);
  rpc RequestNewJob (JobHeaderRequest) returns (JobHeaderResponse);
  rpc SubmitJob (JobSubmitRequest) returns (JobSubmitResponse);
}

message LoginRequest {
  string wallet_address = 1;
  optional string worker_id = 2;
}

message LoginResponse {
  bool result = 1;
  string token = 2;
  optional string reason = 3;
}

message BlockHeaderRequest {
  string token = 1;
}

message BlockHeaderResponse {
  int64 block_height = 1;
  int64 block_timestamp_create = 2;
  string block_method = 3;
  string block_indication = 4;
  int64 block_difficulty = 5;
  int64 block_min_range = 6;
  int64 block_max_range = 7;
  bytes xor_key = 8;
  bytes aes_key = 9;
  bytes aes_iv = 10;
  int32 aes_round = 11;
}

message JobHeaderRequest {
  string token = 1;
  int32 job_solutions = 2;
}

message JobHeaderResponse {
  repeated string job_indications = 1;
}

message JobSubmitRequest {
  string token = 1;
  int64 block_height = 2;
  int64 first_number = 3;
  int64 second_number = 4;
  string operator = 5;
  int64 solution = 6;
  string user_agent = 7;
  bytes raw_data = 8;
}

message JobSubmitResponse {
  bool is_share_accepted = 1;
}